# Livraria_Terceiro_Trimestre

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_alter_autor_email_alter_livro_isbn_and_more.py  0002_autor_editora_livro.py  0003_livro_autores.py
core/models/: categoria.py  livro.py
core/serializers/: autor.py  categoria.py  editora.py  livro.py
core/views/: autor.py  categoria.py  editora.py  livro.py
livraria/: settings.py  urls.py
